update of code structure

--- a/MA1_updated.Rmd
+++ b/MA1_updated.Rmd
@@ -49,7 +49,9 @@ options(scipen = 999)
 
 # Loading relevant data
 tidy_finance <- dbConnect(SQLite(), "tidy_finance.sqlite", extended_types = TRUE) # Connect to sql
-crsp_monthly <- tbl(tidy_finance, "crsp_monthly") %>% collect() %>% select("permno", "month", "ret_excess", "mktcap", "mktcap_lag")
+
+crsp_monthly <- tbl(tidy_finance, "crsp_monthly") %>% collect() %>% select("permno", "month", "ret_excess", "mktcap",                                                                                     "mktcap_lag")
+
 ff_monthly <- tbl(tidy_finance, "factors_ff_monthly") %>% collect() %>% select("month", "mkt_excess")
 
 
@@ -81,23 +83,24 @@ In order to get a sense of the data, we create the following summary statistics,
 # Generates an empty data frame, assigns columns for summary statistics and loads a vector with the variables we wish to summarise
 summary1 <- data.frame(matrix(ncol=7, nrow=2)) #There are 7 summary statistics and two variables
 colnames(summary1) <- c("mean", "sd", "min", "Q1","median", "Q3", "max")
-var_names<- c("ret_excess",  "mktcap")
+var_names <- c("ret_excess",  "mktcap")
 
 # Loops through all the chosen variables and calculates mean, sd, min, Q1, median, Q3 and max for each month then takes the average of those results.  
 for(i in 1:2){  
-summary1[i,] <- crsp_monthly %>%
-    group_by(month) %>%
-  summarise(across(var_names[i],
-                   list(mean = mean, 
-                        sd = sd, 
-                        min = min,
-                        q25 = ~quantile(., 0.25),
-                        median = median,
-                        q75 = ~quantile(., 0.75), 
-                        max = max),
-                   .names = "{.fn}  ")) %>%
-  summarise(across(-month, mean))
-}
+              summary1[i,] <- crsp_monthly %>%
+                              group_by(month) %>%
+                              summarise(across(var_names[i],
+                                        list(mean = mean, 
+                                             sd = sd, 
+                                             min = min,
+                                             q25 = ~quantile(., 0.25),
+                                             median = median,
+                                             q75 = ~quantile(., 0.75), 
+                                             max = max),
+                                        .names = "{.fn}  ")
+                                        ) %>%
+                              summarise(across(-month, mean))
+              }
 
 #Assigns relevant row names
 rownames(summary1) <- c("Excess return", "Market cap")
@@ -109,9 +112,8 @@ summary1[1,] <- round(summary1[1,], 4)
 summary1[2,c(1:2, 4:7)] <- round(summary1[2,c(1:2, 4:7)], 0)
 
 #Prints the summary nicely in a table
-summary1 %>% knitr::kable(booktabs = T, digits = 4, caption = "Summary statistics of the excess return and the market cap") %>% 
-  kable_paper("hover", full_width = T) %>% 
-  kable_styling(latex_options = "HOLD_position")
+summary1 %>% knitr::kable(booktabs = T, digits = 4, caption = "Summary statistics of the excess return and the market cap") %>%              kable_paper("hover", full_width = T) %>% 
+             kable_styling(latex_options = "HOLD_position")
 
 ```
 
@@ -126,12 +128,14 @@ The reason why *crsp_monthly %>% group_by(permno) %>% mutate(ret_excess_lag = la
 ```{r summerise for autocorrelation, echo=FALSE}
 
 # Creating a new table where the month in crsp_monthly is moved 1 month ahead and then the excess return is renamed to ret_excess_lag and na dropped
-crsp_monthly_month_changed <- crsp_monthly %>% mutate(month = month %m+% months(1)) %>% 
-  select(permno, month, ret_excess_lag = ret_excess) %>% 
-  drop_na()
+crsp_monthly_month_changed <- crsp_monthly %>% 
+                              mutate(month = month %m+% months(1)) %>% 
+                              select(permno, month, ret_excess_lag = ret_excess) %>% 
+                              drop_na()
 
 # Using inner join on month and permno to add ret_excess_lag and only keep complete data where there is no na
-crsp_monthly_new <- crsp_monthly %>% inner_join(crsp_monthly_month_changed, by = c("permno", "month"))
+crsp_monthly_new <- crsp_monthly %>% 
+                    inner_join(crsp_monthly_month_changed, by = c("permno", "month"))
 
 return_correlation <- cor(crsp_monthly_new$ret_excess,crsp_monthly_new$ret_excess_lag)
 
@@ -149,15 +153,19 @@ The difference between computing momentum as the relative change in prices or as
 ```{r lag for 12 months, echo=FALSE}
 
 # Creating a new table where the month in crsp_monthly is moved 1 month ahead and then the excess return is renamed to ret_excess_lag and na dropped
-crsp_monthly_month_changed_12 <- crsp_monthly %>% mutate(month = month %m+% months(12)) %>% 
-  select(permno, month, mktcap_lag_12 = mktcap) %>% 
-  drop_na()
+crsp_monthly_month_changed_12 <- crsp_monthly %>% 
+                                 mutate(month = month %m+% months(12)) %>% 
+                                 select(permno, month, mktcap_lag_12 = mktcap) %>% 
+                                 drop_na()
 
 # Using inner join on month and permno to add ret_excess_lag and only keep complete data where there is no na
-crsp_monthly_mom <- crsp_monthly %>% inner_join(crsp_monthly_month_changed_12, by = c("permno", "month"))
+crsp_monthly_mom <- crsp_monthly %>% 
+                    inner_join(crsp_monthly_month_changed_12, by = c("permno", "month"))
 
 # calculation of mom and add to a new column
-crsp_monthly_mom <- crsp_monthly_mom %>% group_by(permno) %>% mutate(mom = 100*(mktcap_lag - mktcap_lag_12)/mktcap_lag_12) 
+crsp_monthly_mom <- crsp_monthly_mom %>% 
+                    group_by(permno) %>% 
+                    mutate(mom = 100*(mktcap_lag - mktcap_lag_12)/mktcap_lag_12) 
 
 # Generates an empty data frame, assigns columns for summary statistics
 summary2 <- data.frame(matrix(ncol=9, nrow=1)) #There are 9 summary statistics and one variable
@@ -165,27 +173,28 @@ colnames(summary2) <- c("mean", "sd", "min", "5th", "25th","median", "75th", "95
 
 # Calculates mean, sd, min, 5th percentile, 25th percentile, median, 75th percentile, 95th percentile and max for each month and then takes the average of those results.
 summary2[1,] <- crsp_monthly_mom %>%
-  group_by(month) %>%
-  summarise(across(mom,
-                   list(mean = mean, 
-                        sd = sd, 
-                        min = min,
-                        q05 = ~quantile(., 0.05),
-                        q25 = ~quantile(., 0.25),
-                        median = median,
-                        q75 = ~quantile(., 0.75),
-                        q95 = ~quantile(., 0.95),
-                        max = max),
-                   .names = "{.fn}  ")) %>%
-  summarise(across(-month, mean))
+                group_by(month) %>%
+                summarise(across(mom,
+                                 list(mean = mean, 
+                                      sd = sd, 
+                                      min = min,
+                                      q05 = ~quantile(., 0.05),
+                                      q25 = ~quantile(., 0.25),
+                                      median = median,
+                                      q75 = ~quantile(., 0.75),
+                                      q95 = ~quantile(., 0.95),
+                                      max = max),
+                                 .names = "{.fn}  ")
+                          ) %>%
+                summarise(across(-month, mean))
 
 #Assigns relevant row names
 rownames(summary2) <- "Momentum"
 
 #Prints the summary nicely in a table
 summary2 %>% knitr::kable(booktabs = T, digits = 2, caption = "Summary statistics of the momentum") %>% 
-  kable_paper("hover", full_width = T) %>% 
-  kable_styling(latex_options = "HOLD_position")
+             kable_paper("hover", full_width = T) %>% 
+             kable_styling(latex_options = "HOLD_position")
 
 mom_mktcap_correlation <- cor(crsp_monthly_mom$mom, log(crsp_monthly_mom$mktcap))
 
@@ -201,43 +210,41 @@ Now we want to examine the relationship between momentum and future stock return
 ```{r Relation, echo=FALSE}
 # Arranges data by month instead of permno
 crsp_monthly_mom <- crsp_monthly_mom %>% 
-  arrange(month)
+                    arrange(month)
 
 # Calculating the decile breakpoints for the mom for each months and defines which portfolio belongs to each month
 mom_portfolios <- crsp_monthly_mom %>%
-  group_by(month) %>%
-  mutate(
-    breakpoint_1 = quantile(mom, probs = .1),
-    breakpoint_2 = quantile(mom, probs = .2),
-    breakpoint_3 = quantile(mom, probs = .3),
-    breakpoint_4 = quantile(mom, probs = .4),
-    breakpoint_5 = quantile(mom, probs = .5),
-    breakpoint_6 = quantile(mom, probs = .6),
-    breakpoint_7 = quantile(mom, probs = .7),
-    breakpoint_8 = quantile(mom, probs = .8),
-    breakpoint_9 = quantile(mom, probs = .9),
-    portfolio = case_when(
-      mom <= breakpoint_1 ~ 1,
-      mom > breakpoint_1 & mom <= breakpoint_2 ~ 2,
-      mom > breakpoint_2 & mom <= breakpoint_3 ~ 3,
-      mom > breakpoint_3 & mom <= breakpoint_4 ~ 4,
-      mom > breakpoint_4 & mom <= breakpoint_5 ~ 5,
-      mom > breakpoint_5 & mom <= breakpoint_6 ~ 6,
-      mom > breakpoint_6 & mom <= breakpoint_7 ~ 7,
-      mom > breakpoint_7 & mom <= breakpoint_8 ~ 8,
-      mom > breakpoint_8 & mom <= breakpoint_9 ~ 9,
-      mom > breakpoint_9 ~ 10
-    )
-  ) %>%
-  select("permno", "month", "ret_excess", "mktcap", "mktcap_lag", "mktcap_lag_12", "mom", "portfolio") %>%
-  mutate(portfolio = as.factor(portfolio))
+                  group_by(month) %>%
+                  mutate(breakpoint_1 = quantile(mom, probs = .1),
+                         breakpoint_2 = quantile(mom, probs = .2),
+                         breakpoint_3 = quantile(mom, probs = .3),
+                         breakpoint_4 = quantile(mom, probs = .4),
+                         breakpoint_5 = quantile(mom, probs = .5),
+                         breakpoint_6 = quantile(mom, probs = .6),
+                         breakpoint_7 = quantile(mom, probs = .7),
+                         breakpoint_8 = quantile(mom, probs = .8),
+                         breakpoint_9 = quantile(mom, probs = .9),
+                         portfolio = case_when(mom <= breakpoint_1 ~ 1,
+                                               mom > breakpoint_1 & mom <= breakpoint_2 ~ 2,
+                                               mom > breakpoint_2 & mom <= breakpoint_3 ~ 3,
+                                               mom > breakpoint_3 & mom <= breakpoint_4 ~ 4,
+                                               mom > breakpoint_4 & mom <= breakpoint_5 ~ 5,
+                                               mom > breakpoint_5 & mom <= breakpoint_6 ~ 6,
+                                               mom > breakpoint_6 & mom <= breakpoint_7 ~ 7,
+                                               mom > breakpoint_7 & mom <= breakpoint_8 ~ 8,
+                                               mom > breakpoint_8 & mom <= breakpoint_9 ~ 9,
+                                               mom > breakpoint_9 ~ 10
+                                               )) %>%
+                  select("permno", "month", "ret_excess", "mktcap", "mktcap_lag", "mktcap_lag_12", "mom", "portfolio") %>%
+                  mutate(portfolio = as.factor(portfolio))
 
 # Creating table of equal weighted average of momentum and market cap
 mom_portfolios %>% group_by(portfolio) %>%
-  summarise('average momentum' = mean(mom),'average market capitalization' = mean(mktcap)) %>%
-  knitr::kable(booktabs = T, digits = 2, col.names = c("Portfolio number", "Average momentum", "Average market capitalization"), caption = "Equal weighted momentum-sorted portfolios with average momentum and market capitalization for each") %>% 
-  kable_paper("hover", full_width = T) %>% 
-  kable_styling(latex_options = "HOLD_position")
+                   summarise('average momentum' = mean(mom),'average market capitalization' = mean(mktcap)) %>%
+                   knitr::kable(booktabs = T, digits = 2, col.names = c("Portfolio number", "Average momentum",                                                                                        "Average market capitalization"), 
+                                caption = "Equal weighted momentum-sorted portfolios with average momentum and market capitalization for each") %>% 
+                   kable_paper("hover", full_width = T) %>% 
+                   kable_styling(latex_options = "HOLD_position")
 
 ```
 In table **MISSING** we see that the momentum is increasing with the portfolio number (which makes sense as per the creation of the portfolios). We also notice that the average market capitalization in increasing from portfolio 1-7 and then begins to fall back down for the last three portfolios with the highest momentum.
@@ -247,24 +254,23 @@ We now calculate the value-weighted monthly excess returns for each of the portf
 ```{r, echo=FALSE}
 # Creating monthly portfolio value-weighted excess returns
 mom_portfolios <- mom_portfolios %>%
-  group_by(month, portfolio) %>%
-  summarize(ret_excess = weighted.mean(ret_excess, mktcap_lag), .groups = "drop")
+                  group_by(month, portfolio) %>%
+                  summarize(ret_excess = weighted.mean(ret_excess, mktcap_lag), .groups = "drop")
 
 # Adds the Fama-French market excess return to the data frame
 mom_portfolios <- mom_portfolios %>%
-  left_join(ff_monthly, by = "month")
+                  left_join(ff_monthly, by = "month")
 
 # Finding the CAPM alpha by regressing the data onto the market excess return
-mom_portfolios %>%
-  group_by(portfolio) %>%
-  summarise(
-    alpha = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[1]),
-    beta = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[2]),
-    ret_excess = mean(ret_excess)
-  ) %>%
-  knitr::kable(booktabs = T, digits = 4, col.names = c("Portfolio number", "CAPM alpha", "Market beta", "Average value-weighted excess return"), caption = "CAPM alpha, beta and excess return for the value-weighted momentum-sorted portfolios") %>% 
-  kable_paper("hover", full_width = T) %>% 
-  kable_styling(latex_options = "HOLD_position")
+mom_portfolios %>% group_by(portfolio) %>%
+                   summarise(alpha = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[1]),
+                             beta = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[2]),
+                             ret_excess = mean(ret_excess)
+                             ) %>%
+                   knitr::kable(booktabs = T, digits = 4, col.names = c("Portfolio number", "CAPM alpha", "Market beta",                                                                                "Average value-weighted excess return"), 
+                                caption = "CAPM alpha, beta and excess return for the value-weighted momentum-sorted portfolios") %>% 
+                   kable_paper("hover", full_width = T) %>% 
+                   kable_styling(latex_options = "HOLD_position")
 
 ```
 
@@ -272,25 +278,21 @@ In table **MISSING** we see that the average value-weighted returns and the CAPM
 
 ```{r, echo=FALSE}
 mom_portfolios_summary <- mom_portfolios %>%
-  group_by(portfolio) %>%
-  summarise(
-    alpha = summary(lm(ret_excess ~ mkt_excess))$coefficients[1]
-  )
+                          group_by(portfolio) %>%
+                          summarise(alpha = summary(lm(ret_excess ~ mkt_excess))$coefficients[1])
 
 # Plot for CAPM alpha
 #while (!is.null(dev.list()))  dev.off() # Resets device settings (just in case, as it may cause problems)
-mom_portfolios_summary %>%
-  ggplot(aes(x = as.factor(portfolio), y = alpha, fill = as.factor(portfolio))) +
-  geom_bar(stat = "identity") +
-  labs(
-    title = "CAPM alphas of the momentum-sorted portfolios with value-weighted returns",
-    x = "Momentum-sorted portfolios",
-    y = "CAPM alpha",
-    fill = "Portfolio"
-  ) +
-  scale_y_continuous(labels = percent) +
-  theme(legend.position = "None") + 
-  theme_bw()
+mom_portfolios_summary %>% ggplot(aes(x = as.factor(portfolio), y = alpha, fill = as.factor(portfolio))) +
+                           geom_bar(stat = "identity") +
+                           labs(title = "CAPM alphas of the momentum-sorted portfolios with value-weighted returns",
+                                x = "Momentum-sorted portfolios",
+                                y = "CAPM alpha",
+                                fill = "Portfolio"
+                                ) +
+                           scale_y_continuous(labels = percent) +
+                           theme(legend.position = "None") + 
+                           theme_bw()
 
 mean_return <- aggregate(ret_excess~portfolio, data = mom_portfolios, mean)
 
@@ -303,13 +305,13 @@ As seen in the graph above, it looks like there is a large negative CAPM alpha f
 ```{r, echo=FALSE}
 # Creating the returns for the long-short portfolio
 long_short_portfolio <- mom_portfolios %>%
-  filter(portfolio %in% c(1, 10)) %>%
-  mutate(portfolio = case_when(
-      portfolio == 10 ~ "high",
-      portfolio == 1 ~ "low")) %>%
-  pivot_wider(month, names_from = portfolio, values_from = ret_excess) %>%
-  mutate(long_short = high - low) %>%
-  left_join(ff_monthly, by = "month")
+                        filter(portfolio %in% c(1, 10)) %>%
+                        mutate(portfolio = case_when(portfolio == 10 ~ "high",
+                                                     portfolio == 1 ~ "low")
+                               ) %>%
+                        pivot_wider(month, names_from = portfolio, values_from = ret_excess) %>%
+                        mutate(long_short = high - low) %>%
+                        left_join(ff_monthly, by = "month")
 
 # Making a linear regression of the portfolio return om the market return in order to get the CAPM values (and then renaming the rows)
 long_short_summary <- summary(lm(long_short ~ mkt_excess, data=long_short_portfolio))$coefficients
@@ -318,10 +320,9 @@ long_short_summary <- rbind(long_short_summary, c(tmp$estimate, tmp$stderr, tmp$
 row.names(long_short_summary) <- c("CAPM alpha", "Market beta", "Portfolio return")
 
 # Using the linear regression values to depict as a table
-long_short_summary %>%
-  knitr::kable(booktabs = T, digits = 4, caption = "CAPM alpha, beta and excess return for the long-short portfolio based on value-weighted momentum-sorted portfolios") %>%
-  kable_paper("hover", full_width = T) %>% 
-  kable_styling(latex_options = "HOLD_position")
+long_short_summary %>% knitr::kable(booktabs = T, digits = 4, caption = "CAPM alpha, beta and excess return for the long-short portfolio based on value-weighted momentum-sorted portfolios") %>%
+                       kable_paper("hover", full_width = T) %>% 
+                       kable_styling(latex_options = "HOLD_position")
 
 # Finding the average return of the long-short portfolio
 long_short_return <- mean(long_short_portfolio$long_short)
@@ -337,92 +338,91 @@ In the following, we will calculate the CAPM alphas using the k-month-ahead exce
 ```{r  Repeat the univariate portfolio, echo=FALSE}
 # Creating the 3, 6, and 12 months ahead returns by moving back the respective month by 2, 5 or 11 months (since ret_excess is already 1-month ahead) and then adding the fama-french k-month-ahead market return for comparison
 excess_return_3_ahead <- crsp_monthly_mom %>% 
-  left_join(ff_monthly, by = "month") %>%
-  mutate(month = month %m+% months(-2)) %>% 
-  select(permno, month, ret_excess_3 = ret_excess, mkt_excess_3 = mkt_excess) %>% 
-  drop_na()
+                         left_join(ff_monthly, by = "month") %>%
+                         mutate(month = month %m+% months(-2)) %>% 
+                         select(permno, month, ret_excess_3 = ret_excess, mkt_excess_3 = mkt_excess) %>% 
+                         drop_na()
+
 excess_return_6_ahead <- crsp_monthly_mom %>% 
-  left_join(ff_monthly, by = "month") %>%
-  mutate(month = month %m+% months(-5)) %>%
-  select(permno, month, ret_excess_6 = ret_excess, mkt_excess_6 = mkt_excess) %>% 
-  drop_na()
+                         left_join(ff_monthly, by = "month") %>%
+                         mutate(month = month %m+% months(-5)) %>%
+                         select(permno, month, ret_excess_6 = ret_excess, mkt_excess_6 = mkt_excess) %>% 
+                         drop_na()
+
 excess_return_12_ahead <- crsp_monthly_mom %>% 
-  left_join(ff_monthly, by = "month") %>%
-  mutate(month = month %m+% months(-11)) %>% 
-  select(permno, month, ret_excess_12 = ret_excess, mkt_excess_12 = mkt_excess) %>% 
-  drop_na()
+                          left_join(ff_monthly, by = "month") %>%
+                          mutate(month = month %m+% months(-11)) %>% 
+                          select(permno, month, ret_excess_12 = ret_excess, mkt_excess_12 = mkt_excess) %>% 
+                          drop_na()
 
 # Combining all the k-months-ahead returns in one data frame
 crsp_monthly_k_months <- crsp_monthly_mom %>%
-  inner_join(excess_return_3_ahead, by = c("permno", "month")) %>%
-  inner_join(excess_return_6_ahead, by = c("permno", "month")) %>%
-  inner_join(excess_return_12_ahead, by = c("permno", "month"))
+                         inner_join(excess_return_3_ahead, by = c("permno", "month")) %>%
+                         inner_join(excess_return_6_ahead, by = c("permno", "month")) %>%
+                         inner_join(excess_return_12_ahead, by = c("permno", "month"))
 
 # Arranges data by month instead of permno
 crsp_monthly_k_months <- crsp_monthly_k_months %>% 
-  arrange(month)
+                         arrange(month)
 
 # Calculating the decile breakpoints for the mom for each months and defines which portfolio belongs to each month
 mom_portfolios_k_ahead <- crsp_monthly_k_months %>%
-  group_by(month) %>%
-  mutate(
-    breakpoint_1 = quantile(mom, probs = .1),
-    breakpoint_2 = quantile(mom, probs = .2),
-    breakpoint_3 = quantile(mom, probs = .3),
-    breakpoint_4 = quantile(mom, probs = .4),
-    breakpoint_5 = quantile(mom, probs = .5),
-    breakpoint_6 = quantile(mom, probs = .6),
-    breakpoint_7 = quantile(mom, probs = .7),
-    breakpoint_8 = quantile(mom, probs = .8),
-    breakpoint_9 = quantile(mom, probs = .9),
-    portfolio = case_when(
-      mom <= breakpoint_1 ~ 1,
-      mom > breakpoint_1 & mom <= breakpoint_2 ~ 2,
-      mom > breakpoint_2 & mom <= breakpoint_3 ~ 3,
-      mom > breakpoint_3 & mom <= breakpoint_4 ~ 4,
-      mom > breakpoint_4 & mom <= breakpoint_5 ~ 5,
-      mom > breakpoint_5 & mom <= breakpoint_6 ~ 6,
-      mom > breakpoint_6 & mom <= breakpoint_7 ~ 7,
-      mom > breakpoint_7 & mom <= breakpoint_8 ~ 8,
-      mom > breakpoint_8 & mom <= breakpoint_9 ~ 9,
-      mom > breakpoint_9 ~ 10
-    )
-  ) %>%
-  select("permno", "month", "ret_excess", "ret_excess_3", "ret_excess_6", "ret_excess_12", "mktcap", "mktcap_lag", "mktcap_lag_12", "mom", "portfolio") %>%
-  mutate(portfolio = as.factor(portfolio))
+                          group_by(month) %>%
+                          mutate(breakpoint_1 = quantile(mom, probs = .1),
+                                 breakpoint_2 = quantile(mom, probs = .2),
+                                 breakpoint_3 = quantile(mom, probs = .3),
+                                 breakpoint_4 = quantile(mom, probs = .4),
+                                 breakpoint_5 = quantile(mom, probs = .5),
+                                 breakpoint_6 = quantile(mom, probs = .6),
+                                 breakpoint_7 = quantile(mom, probs = .7),
+                                 breakpoint_8 = quantile(mom, probs = .8),
+                                 breakpoint_9 = quantile(mom, probs = .9),
+                                 portfolio = case_when(mom <= breakpoint_1 ~ 1,
+                                                       mom > breakpoint_1 & mom <= breakpoint_2 ~ 2,
+                                                       mom > breakpoint_2 & mom <= breakpoint_3 ~ 3,
+                                                       mom > breakpoint_3 & mom <= breakpoint_4 ~ 4,
+                                                       mom > breakpoint_4 & mom <= breakpoint_5 ~ 5,
+                                                       mom > breakpoint_5 & mom <= breakpoint_6 ~ 6,
+                                                       mom > breakpoint_6 & mom <= breakpoint_7 ~ 7,
+                                                       mom > breakpoint_7 & mom <= breakpoint_8 ~ 8,
+                                                       mom > breakpoint_8 & mom <= breakpoint_9 ~ 9,
+                                                       mom > breakpoint_9 ~ 10
+                                )) %>%
+                          select("permno", "month", "ret_excess", "ret_excess_3", "ret_excess_6", "ret_excess_12", "mktcap",                                    "mktcap_lag", "mktcap_lag_12", "mom", "portfolio") %>%
+                          mutate(portfolio = as.factor(portfolio))
 
 # Creating monthly portfolio value-weighted excess returns
 mom_portfolios_k_ahead <- mom_portfolios_k_ahead %>%
-  group_by(month, portfolio) %>%
-  summarise(ret_excess = weighted.mean(ret_excess, mktcap_lag),
-            ret_excess_3 = weighted.mean(ret_excess_3, mktcap_lag),
-            ret_excess_6 = weighted.mean(ret_excess_6, mktcap_lag),
-            ret_excess_12 = weighted.mean(ret_excess_12, mktcap_lag),
-            .groups = "drop")
+                          group_by(month, portfolio) %>%
+                          summarise(ret_excess = weighted.mean(ret_excess, mktcap_lag),
+                                    ret_excess_3 = weighted.mean(ret_excess_3, mktcap_lag),
+                                    ret_excess_6 = weighted.mean(ret_excess_6, mktcap_lag),
+                                    ret_excess_12 = weighted.mean(ret_excess_12, mktcap_lag),
+                                    .groups = "drop")
 
 # Adds the Fama-French k-months-ahead market excess return to the data frame
 excess_return_3_ahead <- excess_return_3_ahead %>% ungroup() %>% select(month, mkt_excess_3) %>% unique()
 excess_return_6_ahead <- excess_return_6_ahead %>% ungroup() %>% select(month, mkt_excess_6) %>% unique()
 excess_return_12_ahead <- excess_return_12_ahead %>% ungroup() %>% select(month, mkt_excess_12) %>% unique()
 mom_portfolios_k_ahead <- mom_portfolios_k_ahead %>%
-  left_join(ff_monthly, by = "month") %>%
-  left_join(excess_return_3_ahead, by = "month") %>%
-  left_join(excess_return_6_ahead, by = "month") %>%
-  left_join(excess_return_12_ahead, by = "month")
+                          left_join(ff_monthly, by = "month") %>%
+                          left_join(excess_return_3_ahead, by = "month") %>%
+                          left_join(excess_return_6_ahead, by = "month") %>%
+                          left_join(excess_return_12_ahead, by = "month")
 
 # Finding the CAPM alpha by regressing the data onto the market excess return
 k_months_ahead_alphas <- mom_portfolios_k_ahead %>%
-  group_by(portfolio) %>%
-  summarise(
-    alpha_1 = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[1]),
-    alpha_3 = as.numeric(lm(ret_excess_3 ~ mkt_excess_3)$coefficients[1]),
-    alpha_6 = as.numeric(lm(ret_excess_6 ~ mkt_excess_6)$coefficients[1]),
-    alpha_12 = as.numeric(lm(ret_excess_12 ~ mkt_excess_12)$coefficients[1])
-  )
-k_months_ahead_alphas %>%
-  knitr::kable(booktabs = T, digits = 4, col.names = c("Portfolio number", "Alpha 1 month ahead", "Alpha 3 months ahead", "Alpha 6 months ahead", "Alpha 12 months ahead"), caption = "CAPM alphas for the value-weighted momentum-sorted portfolios") %>%
-  kable_paper("hover", full_width = T) %>% 
-  kable_styling(latex_options = "HOLD_position")
+                         group_by(portfolio) %>%
+                         summarise(alpha_1 = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[1]),
+                                   alpha_3 = as.numeric(lm(ret_excess_3 ~ mkt_excess_3)$coefficients[1]),
+                                   alpha_6 = as.numeric(lm(ret_excess_6 ~ mkt_excess_6)$coefficients[1]),
+                                   alpha_12 = as.numeric(lm(ret_excess_12 ~ mkt_excess_12)$coefficients[1])
+                                   )
+                         k_months_ahead_alphas %>%
+                         knitr::kable(booktabs = T, digits = 4, col.names = c("Portfolio number", "Alpha 1 month ahead",                                                                                     "Alpha 3 months ahead", "Alpha 6 months ahead",                                                                                "Alpha 12 months ahead"), 
+                                      caption = "CAPM alphas for the value-weighted momentum-sorted portfolios") %>%
+                         kable_paper("hover", full_width = T) %>% 
+                         kable_styling(latex_options = "HOLD_position")
 
 
 ```
@@ -433,31 +433,28 @@ The graph below shows the CAPM alphas for all the k-months-ahead returns (with $
 
 # Creating a tall table with all k-months-ahead alphas together in order to create combined plot
 k_months_ahead_alphas_tall <- k_months_ahead_alphas %>% 
-  gather(key = alphas, value = Value, alpha_1:alpha_12) %>%
-  mutate(alphas = case_when( # Below is used alpha1, alpha2, alpha3, alpha4 so that they have the right order in the plot
-    alphas == "alpha_1" ~ "Alpha1",
-    alphas == "alpha_3" ~ "Alpha2",
-    alphas == "alpha_6" ~ "Alpha3",
-    alphas == "alpha_12" ~ "Alpha4",
-  ))
+                              gather(key = alphas, value = Value, alpha_1:alpha_12) %>%
+                              # Below is used alpha1, alpha2, alpha3, alpha4 so that they have the right order in the plot
+                              mutate(alphas = case_when(alphas == "alpha_1" ~ "Alpha1",
+                                                        alphas == "alpha_3" ~ "Alpha2",
+                                                        alphas == "alpha_6" ~ "Alpha3",
+                                                        alphas == "alpha_12" ~ "Alpha4",
+                                                        ))
 
 # Plot for CAPM alphas
 #while (!is.null(dev.list()))  dev.off() # Resets device settings (just in case, as it may cause problems)
-k_months_ahead_alphas_tall %>%
-  ggplot(aes(x = as.factor(portfolio), y = Value, fill = alphas)) +
-  geom_col(position = "dodge") +
-  
-  labs(
-    title = "CAPM alphas of the momentum-sorted portfolios with the k-months-ahead returns",
-    x = "Momentum-sorted portfolios",
-    y = "CAPM alpha",
-    fill = "Portfolio"
-  ) +
-  scale_fill_discrete(labels = c("1-month-ahead", "3-months-ahead", "6-months-ahead", "12-months-ahead")) +
-  scale_y_continuous(labels = percent) +
-  theme_bw() +
-  theme(legend.position = "bottom") + 
-  theme(plot.title = element_text(size=10))
+k_months_ahead_alphas_tall %>% ggplot(aes(x = as.factor(portfolio), y = Value, fill = alphas)) +
+                               geom_col(position = "dodge") +
+                               labs(title = "CAPM alphas of the momentum-sorted portfolios with the k-months-ahead returns",
+                                    x = "Momentum-sorted portfolios",
+                                    y = "CAPM alpha",
+                                    fill = "Portfolio"
+                                    ) +
+                               scale_fill_discrete(labels = c("1-month-ahead", "3-months-ahead", "6-months-ahead",                                                                           "12-months-ahead")) +
+                               scale_y_continuous(labels = percent) +
+                               theme_bw() +
+                               theme(legend.position = "bottom") + 
+                               theme(plot.title = element_text(size=10))
 
 ```
 
@@ -469,68 +466,62 @@ unique_months <- unique(crsp_monthly_mom$month)
 half_months <- unique_months[seq(1, length(unique_months), 2)] # In order to delete every other month
 
 mom_portfolios <- crsp_monthly_mom %>%
-  group_by(month) %>%
-  mutate(
-    breakpoint_10 = quantile(mom, probs = .1),
-    breakpoint_20 = quantile(mom, probs = .2),
-    breakpoint_30 = quantile(mom, probs = .3),
-    breakpoint_40 = quantile(mom, probs = .4),
-    breakpoint_50 = quantile(mom, probs = .5),
-    breakpoint_60 = quantile(mom, probs = .6),
-    breakpoint_70 = quantile(mom, probs = .7),
-    breakpoint_80 = quantile(mom, probs = .8),
-    breakpoint_90 = quantile(mom, probs = .9),
-    portfolio = case_when(
-      mom <= breakpoint_10 ~ 10,
-      mom > breakpoint_10 & mom <= breakpoint_20 ~ 20,
-      mom > breakpoint_20 & mom <= breakpoint_30 ~ 30,
-      mom > breakpoint_30 & mom <= breakpoint_40 ~ 40,
-      mom > breakpoint_40 & mom <= breakpoint_50 ~ 50,
-      mom > breakpoint_50 & mom <= breakpoint_60 ~ 60,
-      mom > breakpoint_60 & mom <= breakpoint_70 ~ 70,
-      mom > breakpoint_70 & mom <= breakpoint_80 ~ 80,
-      mom > breakpoint_80 & mom <= breakpoint_90 ~ 90,
-      mom > breakpoint_90 ~ 100
-    )
-  ) %>%
-  mutate(ret_excess_lead = lead(ret_excess)) %>% # stores the excess return for the next periode, so it is not forgotten when that period is deleted
-  filter(month %in% half_months) %>% # Deleting every other month so we dont rebalance during these months
-  filter(!is.na(ret_excess_lead)) %>%
-  mutate(ret_excess_sum = ret_excess + ret_excess_lead) %>%
-  group_by(month, portfolio) %>%
-  summarize(ret_excess = weighted.mean(ret_excess_sum, mktcap_lag), .groups = "drop")
+                  group_by(month) %>%
+                  mutate(breakpoint_10 = quantile(mom, probs = .1),
+                         breakpoint_20 = quantile(mom, probs = .2),
+                         breakpoint_30 = quantile(mom, probs = .3),
+                         breakpoint_40 = quantile(mom, probs = .4),
+                         breakpoint_50 = quantile(mom, probs = .5),
+                         breakpoint_60 = quantile(mom, probs = .6),
+                         breakpoint_70 = quantile(mom, probs = .7),
+                         breakpoint_80 = quantile(mom, probs = .8),
+                         breakpoint_90 = quantile(mom, probs = .9),
+                         portfolio = case_when(mom <= breakpoint_10 ~ 10,
+                                               mom > breakpoint_10 & mom <= breakpoint_20 ~ 20,
+                                               mom > breakpoint_20 & mom <= breakpoint_30 ~ 30,
+                                               mom > breakpoint_30 & mom <= breakpoint_40 ~ 40,
+                                               mom > breakpoint_40 & mom <= breakpoint_50 ~ 50,
+                                               mom > breakpoint_50 & mom <= breakpoint_60 ~ 60,
+                                               mom > breakpoint_60 & mom <= breakpoint_70 ~ 70,
+                                               mom > breakpoint_70 & mom <= breakpoint_80 ~ 80,
+                                               mom > breakpoint_80 & mom <= breakpoint_90 ~ 90,
+                                               mom > breakpoint_90 ~ 100
+                         )) %>%
+              # stores the excess return for the next periode, so it is not forgotten when that period is deleted
+               mutate(ret_excess_lead = lead(ret_excess)) %>% 
+               filter(month %in% half_months) %>% # Deleting every other month so we dont rebalance during these months
+               filter(!is.na(ret_excess_lead)) %>%
+               mutate(ret_excess_sum = ret_excess + ret_excess_lead) %>%
+               group_by(month, portfolio) %>%
+               summarize(ret_excess = weighted.mean(ret_excess_sum, mktcap_lag), .groups = "drop")
 
-mom_portfolios <- mom_portfolios %>%
-  left_join(ff_monthly, by = "month")
+mom_portfolios <- mom_portfolios %>% left_join(ff_monthly, by = "month")
 
 # Finding CAPM alpha
 mom_portfolios_summary <- mom_portfolios %>%
-  group_by(portfolio) %>%
-  summarise(
-    alpha = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[1]),
-    beta = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[2]),
-    ret_excess = mean(ret_excess)
-  )
+                          group_by(portfolio) %>%
+  summarise(alpha = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[1]),
+            beta = as.numeric(lm(ret_excess ~ mkt_excess)$coefficients[2]),
+            ret_excess = mean(ret_excess)
+            )
 
-mom_portfolios_summary %>%
-  ggplot(aes(x = portfolio, y = alpha/2, fill = as.factor(portfolio))) +
-  geom_bar(stat = "identity") +
-  labs(
-    title = "Alphas of momentum-sorted portfolios (rebalancing every 2 months)",
-    x = "Momentum decile portfolios",
-    y = "CAPM alpha",
-    fill = "Portfolio"
-  ) +
-  scale_y_continuous(labels = percent) +
-  theme(legend.position = "None")
+mom_portfolios_summary %>% ggplot(aes(x = portfolio, y = alpha/2, fill = as.factor(portfolio))) +
+                           geom_bar(stat = "identity") +
+                           labs(title = "Alphas of momentum-sorted portfolios (rebalancing every 2 months)",
+                                x = "Momentum decile portfolios",
+                                y = "CAPM alpha",
+                                fill = "Portfolio"
+                                ) +
+                           scale_y_continuous(labels = percent) +
+                           theme(legend.position = "None")
 
 mean_return1 <- aggregate(ret_excess ~ portfolio, data = mom_portfolios, mean)
 
 sharp_ratio_e6 <- mean_return1$ret_excess/sd(mom_portfolios$ret_excess) # Not sure about Sharpe Ratio, because they are very small
 
 sharp_ratio <- cbind(sharp_ratio_e4,sharp_ratio_e6)
-sharp_ratio %>%
-knitr::kable(digits = 4) #creates a table to view the data.
+
+sharp_ratio %>% knitr::kable(digits = 4) #creates a table to view the data.
 
 ```
 
